--- a/l4proj/l4proj.cls
+++ b/l4proj/l4proj.cls
@@ -45,6 +45,7 @@
 
 \usepackage{microtype} % improve typography
 \usepackage{anyfontsize} % allow any size of font
+\let\Bbbk\relax
 \usepackage{amsmath,amsfonts,amsbsy,amssymb}
 \usepackage[style]{abstract} % abstract styling
 
@@ -293,3 +294,6 @@ textfont=it,tableposition=above]{caption}
       \parsep=1pt plus 1pt
       \itemsep=\parsep}
 
+
+\usepackage{listings}
+\usepackage{xcolor}
