finish part of Classicla IR Model - BM25

--- a/l4proj/l4proj.bib
+++ b/l4proj/l4proj.bib
@@ -1,46 +1,36 @@
-@inproceedings{Pey17,
-  author    = {Simon {Peyton Jones}},
-  title     = {How to Write a Great Research Paper},
-  booktitle = {2017 Imperial College Computing Student Workshop, {ICCSW} 2017, September
-               26-27, 2017, London, {UK}},
-  pages     = {1:1--1:1},
-  year      = {2017},    
-  
+@article{salton1975vector,
+  title={A vector space model for information retrieval},
+  author={Salton, Gerard},
+  journal={Journal of the ASIS},
+  pages={613--620},
+  year={1975}
 }
 
-@book{Wil09,
-  title={Style: the basics of clarity and grace},
-  author={Williams, Joseph M and Bizup, Joseph},
-  year={2009},
-  publisher={Pearson Longman}
+@article{deerwester1990indexing,
+  title={Indexing by latent semantic analysis},
+  author={Deerwester, Scott and Dumais, Susan T and Furnas, George W and Landauer, Thomas K and Harshman, Richard},
+  journal={Journal of the American society for information science},
+  volume={41},
+  number={6},
+  pages={391--407},
+  year={1990},
+  publisher={Wiley Online Library}
 }
 
-@book{Pin15,
-  title={The sense of style: The thinking person's guide to writing in the 21st century},
-  author={Pinker, Steven},
-  year={2015},
-  publisher={Penguin Books}
+@article{nogueira2019passage,
+  title={Passage Re-ranking with BERT},
+  author={Nogueira, Rodrigo and Cho, Kyunghyun},
+  journal={arXiv preprint arXiv:1901.04085},
+  year={2019}
 }
 
-@book{StrWhi07,
-  title={The Elements of style},
-  author={Strunk, William and Whyte, EB},
-  year={2007},
-  publisher={Penguin}
-}
-
-@book{Von80,
-  title={How to write with style},
-  author={Vonnegut, Kurt},
-  year={1980},
-  publisher={International Paper Company}
-}
-
-@incollection{Orw68,
-  title={Politics and the {English} language},
-  author={Orwell, George},
-  booktitle={The collected essays, journalism and letters of George Orwell},
-  pages={127--140},
-  year={1968},
-  publisher={Harcourt, Brace, Javanovich}
+@article{robertson1976relevance,
+  title={Relevance weighting of search terms},
+  author={Robertson, Stephen E and Jones, K Sparck},
+  journal={Journal of the American Society for Information science},
+  volume={27},
+  number={3},
+  pages={129--146},
+  year={1976},
+  publisher={Wiley Online Library}
 }
